solved images urlbase issue v2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
   <div class="main-user">
     <div class="main-user__image">
       <picture>
-        <source srcset="../assets/images/user/selfie.webp" type="image/webp">
-        <img width="246" height="197" src="../assets/images/user/selfie.jpg" alt="Endika Llonin Abasolo - maquetador web - frontend"/>
+        <source srcset="./assets/images/user/selfie.webp" type="image/webp">
+        <img width="246" height="197" src="./assets/images/user/selfie.jpg" alt="Endika Llonin Abasolo - maquetador web - frontend"/>
       </picture>
     </div>
     <h1 class="main-user__name">Endika Llonin Abasolo</h1>
@@ -46,7 +46,7 @@
   </nav>
   <!-- Comentado por el momento
   <p class="download-cv">
-    <a href="../assets/pdf/CV-Maquetador-web_Endika-Llonin-Abasolo.pdf" download title="Se descargará mi curriculum en formato PDF"><span>Descarga mi currículum en PDF</span></a>
+    <a href="./assets/pdf/CV-Maquetador-web_Endika-Llonin-Abasolo.pdf" download title="Se descargará mi curriculum en formato PDF"><span>Descarga mi currículum en PDF</span></a>
   </p>
   -->
 </header>
