--- a/src/app/components/conocimientos/conocimientos.component.html
+++ b/src/app/components/conocimientos/conocimientos.component.html
@@ -61,17 +61,17 @@
         <swiper [pagination]="true" [loop]="true" [pagination]="{clickable: true}" [autoplay]="{delay: 5000}" class="cetifications-swiper">
             <ng-template swiperSlide>
                 <a href="" target="_blank" title="Certificación UX-PM Nivel 2">
-                    <img src="../../../assets/images/certifications/ux-certification.svg" alt="">
+                    <img src="./assets/images/certifications/ux-certification.svg" alt="">
                 </a>
             </ng-template>
             <ng-template swiperSlide>
                 <a href="" target="_blank" title="Certificación UX-PM Nivel 2">
-                    <img src="../../../assets/images/certifications/ux-certification.svg" alt="">
+                    <img src="./assets/images/certifications/ux-certification.svg" alt="">
                 </a>
             </ng-template>
             <ng-template swiperSlide>
                 <a href="" target="_blank" title="Certificación UX-PM Nivel 2">
-                    <img src="../../../assets/images/certifications/ux-certification.svg" alt="">
+                    <img src="./assets/images/certifications/ux-certification.svg" alt="">
                 </a>
             </ng-template>
           </swiper>
