--- a/src/app/components/contacto/contacto.component.html
+++ b/src/app/components/contacto/contacto.component.html
@@ -12,7 +12,7 @@
     </a>
   </li>
   <li class="download-link">
-    <a href="../assets/pdf/CV-Maquetador-web_Endika-Llonin-Abasolo.pdf" download title="Se descargará mi curriculumn en formato PDF" class="rrss rrss-cv">
+    <a href="./assets/pdf/CV-Maquetador-web_Endika-Llonin-Abasolo.pdf" download title="Se descargará mi curriculumn en formato PDF" class="rrss rrss-cv">
       Currículum (PDF)
     </a>
   </li>
