--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -8,8 +8,8 @@
         </button>
     </div>
     <div class="change-view">
-        <img class="img-list" src="../../../assets/images/icons/change-view-icon.svg" alt="Cambiar vista a tipo listado" (click)="changeViewList($event)">
-        <img class="img-grid" style="display: none;" src="../../../assets/images/icons/change-view-icon-grid.svg" alt="Cambiar vista a tipo cuadrícula" (click)="changeViewGrid($event)">
+        <img class="img-list" src="./assets/images/icons/change-view-icon.svg" alt="Cambiar vista a tipo listado" (click)="changeViewList($event)">
+        <img class="img-grid" style="display: none;" src="./assets/images/icons/change-view-icon-grid.svg" alt="Cambiar vista a tipo cuadrícula" (click)="changeViewGrid($event)">
         <span class="txt-list">Lista</span>
         <span class="txt-grid" style="display: none;">Cuadrícula</span>
     </div>
@@ -24,7 +24,7 @@
     <div class="grid-item" *ngFor="let proyecto of proyectos">
         <article>
             <a class="card card-project" [routerLink]="['/proyectos', proyecto.titulo]" [attr.aria-label]="'Ver el detalle del proyecto de ' + proyecto.titulo">
-                <div class="card-project__block" [style.backgroundImage]="'linear-gradient(rgba(38, 53, 63, 0.3) 10%, rgba(17, 28, 34, 1) 50%), url(../../../assets/images/projects/' + proyecto.titulo.toLowerCase() +'/portada/' + proyecto.portada +')'">
+                <div class="card-project__block" [style.backgroundImage]="'linear-gradient(rgba(38, 53, 63, 0.3) 10%, rgba(17, 28, 34, 1) 50%), url(./assets/images/projects/' + proyecto.titulo.toLowerCase() +'/portada/' + proyecto.portada +')'">
                     <h1>{{proyecto.titulo}}</h1>
                     <p class="categories">{{proyecto.categorias.join(' - ')}}</p>
                     <p class="description">{{proyecto.descripcion}}</p>   
