--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -3,7 +3,7 @@
     <ul class="empresas-list">
         <li class="empresa" *ngFor="let empresa of empresas">
             <div class="logo-container">
-                <img src="../../../assets/images/empresas/logos/{{empresa.logo}}" alt="{{empresa.nombre}}">
+                <img src="./assets/images/empresas/logos/{{empresa.logo}}" alt="{{empresa.nombre}}">
             </div>
             <div class="info-container">
                 <p class="dates">{{empresa.fechaInicio}} / {{empresa.fechaFinal}}</p>
