--- a/src/app/components/contacto/contacto.component.html
+++ b/src/app/components/contacto/contacto.component.html
@@ -1,4 +1,4 @@
-<p>Contacta conmigo a través de LinkedIn o e-mail. También puedes descargarte mi currículum en PDF.</p>
+<p>Contáctame fácilmente por LinkedIn o e-mail. Si lo prefieres, también puedes descargar mi currículum en PDF.</p>
 
 <ul class="contact-container">
   <li>
