--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,13 +3,13 @@
     <div class="main-user__image">
       <picture>
         <source srcset="./assets/images/user/selfie.webp" type="image/webp">
-        <img width="246" height="197" src="./assets/images/user/selfie.jpg" alt="Endika Llonin Abasolo - maquetador web - frontend"/>
+        <img width="246" height="197" src="./assets/images/user/selfie.jpg" alt="Endika Llonin Abasolo - maquetador web - frontend designer"/>
       </picture>
     </div>
     <h1 class="main-user__name">Endika Llonin Abasolo</h1>
     <h2 class="main-user__role">
       Frontend Designer
-      <span class="subtitle">Specialist in UX/UI development</span>
+      <span class="subtitle">Interface Development Specialist</span>
     </h2>
   </div>
   <div class="menu-btn only-responsive" (click)="showMenu()">
