--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,8 +5,8 @@ $accent-color: #CFFF88;//#8ED3BB;
 $custom-white: #FFFFFF;
 
 //BG-COLORS
-$body-bg: #26353f;
-$header-bg: #1a262e;
+$body-bg: #1a242b;//#26353f;
+$header-bg: #12191d;//#1a262e;
 
 $presentacion-bg: #CFFF88;
 $proyectos-bg: #88D0FF;
