--- a/src/app/components/proyectos/proyectos.component.scss
+++ b/src/app/components/proyectos/proyectos.component.scss
@@ -11,9 +11,9 @@
     .tags-filter{
         &__item{
             font-family: $font-b-regular;
-            font-weight: 300;
+            font-weight: 400;
             letter-spacing: .60px;
-            font-size: $font-xxs;
+            font-size: $font-x;
             background-color: transparent;
             border-radius: 20px;
             padding: .5rem 1.2rem;
@@ -48,9 +48,9 @@
             }
         }
         span{
-            font-size: 15px;
-            font-weight: 100;
-            margin-right: .8rem;
+            font-size: 1rem;
+            font-weight: 400;
+            margin-right: 1rem;
         }
     }
 }
@@ -119,7 +119,7 @@ $anim-speed: 270ms;
 .card-list-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 20px;
+    grid-gap: 1.75rem;
     height: calc(100vh - 225px);
     overflow-y: auto;
     padding-right: 8px;
