--- a/src/styles.scss
+++ b/src/styles.scss
@@ -106,6 +106,8 @@ ul{
     margin-bottom: 40px;
     a{
         display: flex;
+        border-radius: 4px;
+        overflow: hidden;
         img{
             width: 100%;
         }
