--- a/src/app/components/conocimientos/conocimientos.component.html
+++ b/src/app/components/conocimientos/conocimientos.component.html
@@ -29,6 +29,7 @@
         <ul>
             <li><strong>Entorno de desarrollo:</strong> Visual Studio Code, Git, GitHub, Sourcetree.</li>
             <li><strong>Diseño y prototipado:</strong> Figma, Adobe XD, Photoshop, Illustrator, AxureRP.</li>
+            <li><strong>IAs generativa:</strong> Uso de ChatGPT, Gemini o Copilot mediante la ingenieria de prompts, para acelerar el desarrollo web, crear prototipos interactivos y optimizar flujos de trabajo.</li>
             <li><strong>Gestión y colaboración:</strong> JIRA, Teams, Trello, Notion.</li>
         </ul>
     </div>
